@@ -5,6 +5,7 @@
 \subsection New
 - The switcher transitions have been implemented
 - The search client can be opened by typing on the hardware keyboard
+- The call UI can be opened by typing numbers on the hardware keyboard
 
 \section v02117 0.21.17
 
